--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.67"
+    "zod": "3.25.67",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
