--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
-  "framework": "nextjs"
+  "installCommand": "npm install --legacy-peer-deps"
 }
