--- a/package.json
+++ b/package.json
@@ -60,9 +60,7 @@
     "vaul": "^0.9.9",
     "zod": "3.25.67",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.31"
-  },
-  "devDependencies": {
+    "postcss": "^8.4.31",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
